--- a/.env.template
+++ b/.env.template
@@ -2,10 +2,12 @@ PORT=3000
 
 #PRODUCTS-MS CONFIG
 
-PRODUCTS_MICROSERVICE_HOST=localhost
-PRODUCTS_MICROSERVICE_PORT=3001
+# PRODUCTS_MICROSERVICE_HOST=localhost
+# PRODUCTS_MICROSERVICE_PORT=3001
 
 #ORDERS-MS CONFIG
 
-ORDERS_MICROSERVICE_HOST=localhost
-ORDERS_MICROSERVICE_PORT=3002
+# ORDERS_MICROSERVICE_HOST=localhost
+# ORDERS_MICROSERVICE_PORT=3002
+
+NATS_SERVERS="nats://localhost:4222,nats://localhost:4223"
